--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,12 +1,19 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 
-set -g @plugin  'tmux-plugins/tpm'
-set -g @plugin  'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+bind r source-file ~/.tmux.conf
 
 set -g mouse on
 
