feat: adds tmux layout script and configures key bindings

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,6 +8,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+bind-key C-l run-shell "~/.config/tmux/layout.sh"
+if-shell "[[ -z $TMUX ]]" "~/.config/tmux/layout.sh"
+
 bind | split-window -h
 bind - split-window -v
 unbind '"'
