--- a/.config/thorium-flags.conf
+++ b/.config/thorium-flags.conf
@@ -1,5 +1,2 @@
+--enable-features=AcceleratedVideoDecodeLinuxZeroCopyGL,AcceleratedVideoDecodeLinuxGL
 --ozone-platform=wayland
---enable-zero-copy
---enable-features=WaylandWindowDecorations,UseOzonePlatform,AcceleratedVideoDecodeLinuxGL,EnableUnsafeWebGPU
---ignore-gpu-blocklist
---enable-gpu-rasterization
