feat: tmux bar changes

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,23 +1,49 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+# termux plugins manager plugins
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'sainnhe/tmux-fzf'
+#set -g @plugin 'ofirgall/tmux-window-name'
+#set -g @plugin 'noscript/tmux-mighty-scroll'
+#set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+
+# configuration
+
+set -g history-limit 100000
+
+
+# plugin configuration
+
+TMUX_FZF_LAUNCH_KEY="C-f"
+
+#set -g @mighty-scroll-interval 3
+#set -g @mighty-scroll-by-line 'man fzf'
+#set -g @mighty-scroll-select-pane off
+
+# keybinds
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-bind-key C-l run-shell "~/.config/tmux/layout.sh"
-if-shell "[[ -z $TMUX ]]" "~/.config/tmux/layout.sh"
-
-bind | split-window -h
-bind - split-window -v
 unbind '"'
 unbind %
+bind | split-window -h
+bind - split-window -v
 
-bind r source-file ~/.tmux.conf
+# status bar
+
+set -g status-left '#{?client_prefix,#[bg=red],} B #{tmux_mode_indicator} #[default][#{session_name}] '
+set -g status-right '' 
+
+# custom shortcuts
+bind-key C-l run-shell "~/.config/tmux/layout.sh" # prefix > ctrl+l : for layout
 
 set -g mouse on
 
-run '~/.tmux/plugins/tpm/tpm'
+run '/usr/share/tmux-plugin-manager/tpm'
+
